App.js BackgroundSetup And Created two component

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   background-image: radial-gradient(#ffffff 2.5px, transparent 2.5px), radial-gradient(#ffffff 2.5px, transparent 2.5px);
   background-size: 36px 36px;
   background-position: 0 0, 18px 18px;
-  background-color: #b1d2ff;
+  background-color: #C0C0C0;
 }
 
 
